Updated source code to java 7. Reformatted to consistently use 4 spaces as indentation depth. Fixed javadoc.